--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,39 +1,70 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+html{
+    font-family: monospace;
 }
 
-.upper {
-    height: 40%;
-    background-color: #2b2b2b;
-    position: relative;
-}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
-.bottom {
-    height: 60%;
-    background-color: #d8d8d8;
-}
+  }
 
-.column {
+.all_tooltips{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
-    border: 10px solid white;
-    width:79.5%;
-    height:84.2%;
-    border-radius: 15%;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
 }
 
-iframe{
-    display:block;
-   position: absolute;  
-   width: 100%; 
-   height: 100%; 
-   margin-top:-0.1rem;
-   margin-left:-0.05rem;
+.tooltip-content{
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 0px 20px #00000020;
+    padding:30px;
+    border-radius: 8px;
+    width: 90vw;
+    max-width:300px;
+    opacity: 0;
+    pointer-events:none;
+    z-index: 2;
+}
+
+.pin{
+    position:absolute;
+    top:50%;
+    left:50%;
+    background-color: white;
+    height:25px;
+    width:25px;
+    border-radius:50%;
+    cursor: pointer;
+}
+
+.pin:after{
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:100%;
+    background-color: white;
+    border-radius:50%;
+    animation:puls-effect 1s ease-in-out infinite;
+}
+
+.tooltip.active .tooltip-content{
+    opacity:1;
+    pointer-events:all;
+}
+
+@keyframes puls-effect{
+    0%{
+        transform:scale(1);
+        opacity:1;
+    }
+    100%{
+        transform: scale(3);
+        opacity:0;
+    }
 }
