--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,38 @@
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
 html{
     font-family: monospace;
+}
+
+body{
+    background-color:rgb(240, 245, 255);
+    width:100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width:80%;
+}
 
-  }
+section {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+}
 
-.all_tooltips{
+  
+.all-tooltip{
     position: absolute;
     width:100%;
     height:100%;
@@ -26,23 +49,25 @@ img {
     width: 90vw;
     max-width:300px;
     opacity: 0;
-    pointer-events:none;
+    pointer-events:none; 
     z-index: 2;
 }
 
 .pin{
     position:absolute;
+    content:"";
     top:50%;
-    left:50%;
+    left:80%;
     background-color: white;
     height:25px;
     width:25px;
     border-radius:50%;
+    opacity:0.7;
     cursor: pointer;
 }
 
 .pin:after{
-    content:'';
+    content:"";
     position:absolute;
     top:0;
     left:0;
@@ -50,12 +75,29 @@ img {
     width:100%;
     background-color: white;
     border-radius:50%;
-    animation:puls-effect 1s ease-in-out infinite;
+    animation:puls-effect 1s ease infinite;
 }
 
 .tooltip.active .tooltip-content{
     opacity:1;
-    pointer-events:all;
+    pointer-events: all;
+    display:block;
+}
+
+.tooltip_a .pin{
+    left:30%;
+    top:79%;
+
+}
+
+.tooltip_c .pin{
+    left: 36%;
+    top: 116%;
+}
+
+.tooltip_p .pin{
+    left:55%;
+    top:105%;
 }
 
 @keyframes puls-effect{
