--- a/test.css
+++ b/test.css
@@ -1,21 +1,444 @@
-.tooltip {
-    position: absolute;
-    background-color: black;
-    color: white;
-    padding: 5px;
-    font-size: 12px;
-    border-radius: 4px;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease-in-out;
-  }
-  
-  .area-tooltip {
-    position: relative;
-  }
-  
-  .area-tooltip:hover .tooltip {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 22px;
+  font-family: "Montserrat";
+}
+body {
+  background-color: azure;
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+}
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  align-items:center;
+  position: relative;
+  display:flex;
+}
+.container img {
+  height: 100%;
+  width: 100%;
+}
+.all-tooltip {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.tooltip-content {
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 20px #00000020;
+  padding: 30px;
+  border-radius: 8px;
+  width: 90vw;
+  max-width: 400px;
+  opacity: 0;
+  pointer-events: none;
+  /* left: -50%; */
+  z-index: 2;
+}
+.tooltip-content .arrow {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border: 10px solid transparent;
+  border-bottom-color: rgb(255, 255, 255);
+  top: 0px;
+  left: 50%;
+  transform: translate(-50%, -100%) rotate(0deg);
+}
+.pin {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 80%;
+  height: 25px;
+  width: 25px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.pin:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  animation: puls-effect 1s ease infinite;
+}
+.tooltip.active .tooltip-content {
+  opacity: 1;
+  pointer-events: all;
+  display: block;
+}
+
+/* Custom Style for tooltip-1 */
+
+.tooltip-1 .pin {
+  top: 84.5%;
+  left: 30.8%;
+  height: 20px;
+  width: 20px;
+}
+/* .tooltip-1 .tooltip-content {
+  display: flex;
+  max-width: 500px;
+  align-items: stretch;
+  justify-content: center;
+  padding: 0;
+  background-color: aliceblue;
+}
+.tooltip-1.active .tooltip-content {
+  display: flex;
+}
+
+.tooltip-1 .tooltip-content .content {
+  width: 50%;
+  padding: 20px;
+}
+.tooltip-1 .tooltip-content .content h1 {
+  font-size: 24px;
+}
+.tooltip-1 .tooltip-content .content p {
+  font-size: 18px;
+}
+.tooltip-1 .tooltip-content .content {
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 20px #00000020;
+} */
+
+.tooltip-1 .tooltip-content .content h1 {
+  margin: 20px 0;
+  font-size:24px;
+}
+.tooltip-1 .tooltip-content {
+  background-color: aliceblue;
+}
+.tooltip-1 .tooltip-content {
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  background-color: aliceblue;
+  color: black;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 20px #00000020;
+}
+
+
+
+/* custom style for tooltip-2 */
+
+.tooltip-2 .pin {
+  left:23.8%;
+  top:79.5%;
+  height: 20px;
+  width: 20px;
+}
+.tooltip-2 .tooltip-content .content h1 {
+  margin: 20px 0;
+  font-size:24px;
+}
+.tooltip-2 .tooltip-content {
+  background-color: aliceblue;
+}
+.tooltip-2 .tooltip-content {
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  background-color: aliceblue;
+  color: black;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 20px #00000020;
+}
+
+/* Custom style for tooltip-3 */
+
+.tooltip-3 .pin {
+  top: 74.9%;
+  left: 47.2%;
+  height: 20px;
+  width: 20px;
+}
+
+.tooltip-3 .tooltip-content .content h1 {
+  font-family:"Montserrat" ;
+  margin: 20px 0;
+  font-size:24px;
+}
+.tooltip-3 .tooltip-content {
+  font-size: 18px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  background-color: aliceblue;
+  color: black;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 20px #00000020;
+}
+/* Custom style for tooltip-4 */
+
+.tooltip-4 .pin {
+  top: 82.2%;
+  left: 43.3%;
+  height: 20px;
+  width: 20px;
+}
+
+.tooltip-4 .tooltip-content .content h1 {
+  margin: 20px 0;
+  font-size:24px;
+}
+.tooltip-4 .tooltip-content {
+  background-color: aliceblue;
+}
+.tooltip-4 .tooltip-content {
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  background-color: aliceblue;
+  color: black;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 0px 20px #00000020;
+}
+/* Puls Effect For Pins */
+
+@keyframes puls-effect {
+  0% {
+    transform: scale(1);
     opacity: 1;
-    visibility: visible;
   }
-  
+  100% {
+    transform: scale(3);
+    opacity: 0;
+  }
+}
+
+/* Media Query */
+
+@media (max-width: 768px) {
+  .tooltip-1 .tooltip-content {
+    flex-direction: column;
+    max-width: 300px;
+  }
+  .tooltip-1 .tooltip-content .content,
+  .tooltip-1 .tooltip-content .img {
+    width: 100%;
+  }
+}
+
+/* ********************* */
+/* This Code is for only the floating card in right bottom corner */
+/* ********************** */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a:link {
+  padding: 0;
+  margin: 0;
+  color: rgb(26, 162, 200);
+  text-decoration: underline;
+}
+
+a:hover{
+  color:hotpink;
+  cursor: pointer;
+}
+#webCifar-sidebox {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  overflow-x: clip;
+  width: 300px;
+}
+#webCifar-sidebox p {
+  padding: 0;
+  margin: 0;
+}
+#webCifar {
+  --color-1: #17bcb4;
+  --color-2: #24252a;
+  --color-3: #244044;
+  --color-4: #f3f8f7;
+  background: var(--color-2);
+  display: inline-block;
+  color: var(--color-4);
+  padding: 10px 17px;
+  border-radius: 6px;
+  font-family: "Roboto Mono", monospace;
+  text-align: center;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  -webkit-transform: translateX(calc(100% + 5px));
+  transform: translateX(calc(100% + 5px));
+  -webkit-transition: 0.5s ease-out transform;
+  transition: 0.5s ease-out transform;
+  z-index: 4;
+}
+
+#webCifar.active {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+
+#webCifar .logo {
+  font-size: 25px;
+}
+
+#webCifar .author {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+#webCifar .author span {
+  background-color: var(--color-3);
+  padding: 3px;
+  border-radius: 4px;
+}
+
+#webCifar .items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+#webCifar .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 5px;
+  border-radius: 4px;
+  text-align: left;
+}
+
+#webCifar .item:hover {
+  background-color: var(--color-3);
+}
+
+#webCifar svg {
+  max-width: 20px;
+}
+
+#webCifar .close {
+  position: absolute;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  right: 5px;
+  top: 5px;
+  padding: 5px;
+  background-color: var(--color-3);
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+#webCifar-icon {
+  --color-2: #24252a;
+  --color-3: #244044;
+  font-family: "Roboto Mono", monospace;
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: var(--color-2);
+  color: white;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px;
+  border-radius: 4px;
+  gap: 5px;
+  margin: 5px;
+  cursor: pointer;
+  z-index: 1;
+  position: relative;
+  right: -27%;
+}
+
+#webCifar-icon svg {
+  max-width: 20px;
+}
+
+
+
+
+/* -----------------------------Artwork---------------------------- */
